--- a/client/src/components/Modal/index.css
+++ b/client/src/components/Modal/index.css
@@ -20,6 +20,7 @@
   border-style: solid;
   border-color: #59392A;
   border-radius: 5px;
+  border-width:thick;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -49,4 +50,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.SubmitButton {
+  background: none;
+  font-family: 'Modak', cursive;
 }
