renders bear on game screen

--- a/client/src/screens/Game/game.css
+++ b/client/src/screens/Game/game.css
@@ -1,12 +1,15 @@
 .selected {
-    background-color: black;
-    border: solid 1px purple;
+    background-image: url('../../assets/brownBear.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    border: solid 1px black;
     content: "";
     pointer-events: none;
 
 }
 
 .grid-board {
+    background: url("../../assets/gameboard-blueprint.svg");
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, 80px);
