--- a/client/src/screens/Game/game.css
+++ b/client/src/screens/Game/game.css
@@ -1,3 +1,9 @@
+/* .game-board {
+    background-image: url("../../assets/gameboard-blueprint.svg");
+    background-size: 5%;
+    background-position: center;
+} */
+
 .selected {
     background-image: url('../../assets/brownBear.png');
     background-position: center;
