--- a/client/src/components/Modal/index.css
+++ b/client/src/components/Modal/index.css
@@ -12,6 +12,8 @@
 
 .ExitButton {
   position: absolute;
+  left: 0;
+  z-index: 1;
 }
 
 .Modal {
@@ -26,6 +28,7 @@
   margin: 0 auto;
   min-height: 50vh;
   width: 500px;
+  position: absolute;
 }
 
 .ModalTitle {
