--- a/client/src/sass/screens/_game.scss
+++ b/client/src/sass/screens/_game.scss
@@ -1,11 +1,6 @@
-/* .game-board {
-    background-image: url("../../assets/gameboard-blueprint.svg");
-    background-size: 5%;
-    background-position: center;
-} */
 
 .selected {
-    background-image: url('../../assets/brownBear.png');
+    background-image: url('../../assets/brown-bear/front.png');
     background-position: center;
     background-repeat: no-repeat;
     border: solid 1px black;
