--- a/client/src/sass/screens/_game.scss
+++ b/client/src/sass/screens/_game.scss
@@ -1,9 +1,38 @@
+.game-board {
+    background-image: url('../../assets/gameboard-blueprint.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 900px; 
+    width:  1440px;
+    box-sizing: border-box;
+}
+
+.grid-board {
+    padding-top: 160px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(12, 80px);
+    grid-template-rows: repeat(6, 80px);
+}
+
+.mailbox {
+    background-image: url('../../assets/mailbox/mailbox.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 1;
+    content: "";
+    transition: transform .2s;
+}
+
+.mailbox:hover {
+    transform: scale(1.2);
+}
 
 .selected {
     background-image: url('../../assets/brown-bear/front.png');
     background-position: center;
     background-repeat: no-repeat;
-    border: solid 1px black;
+    z-index: 2;
     content: "";
     pointer-events: none;
 }
@@ -27,33 +56,4 @@
     background-image: url('../../assets/white-bear/front.png');
     background-position: center;
     background-repeat: no-repeat;
-}
-
-.game-board {
-    background-image: url('../../assets/gameboard-blueprint.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 900px; 
-    width:  1440px;
-    box-sizing: border-box;
-}
-
-.grid-board {
-    padding-top: 160px;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(12, 80px);
-    grid-template-rows: repeat(6, 80px);
-}
-
-.mailbox {
-    background-image: url('../../assets/mailbox/mailbox.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    content: "";
-    transition: transform .2s;
-}
-
-.mailbox:hover {
-    transform: scale(1.2);
 }
