--- a/client/src/sass/util/_mixins.scss
+++ b/client/src/sass/util/_mixins.scss
@@ -5,3 +5,13 @@
     text-shadow: 1px 0 0 #59392A, 0 -1px 0 #59392A, 0 1px 0 #59392A, -1px 0 0 #59392A;
 }
 
+@mixin login-buttons {
+    box-sizing: border-box;
+    color: $main-txt-color;
+    font-size: 32px;
+    font-weight: bold;
+    padding: 5px 15px;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 2px solid $main-txt-color;
+}
