--- a/client/src/sass/util/_mixins.scss
+++ b/client/src/sass/util/_mixins.scss
@@ -1,17 +1,52 @@
 @mixin titles {
-    font-family: $main-txt-font-cursive;
-    font-weight: normal;
-    color: $main-txt-color;
-    text-shadow: 1px 0 0 #59392A, 0 -1px 0 #59392A, 0 1px 0 #59392A, -1px 0 0 #59392A;
+  font-family: $main-txt-font-cursive;
+  font-weight: normal;
+  color: $main-txt-color;
+  text-shadow: 1px 0 0 #59392a, 0 -1px 0 #59392a, 0 1px 0 #59392a,
+    -1px 0 0 #59392a;
+}
+// Main screen mixins
+@mixin main-image {
+  position: relative;
+  width: 100vw;
 }
 
-@mixin login-buttons {
-    box-sizing: border-box;
-    color: $main-txt-color;
-    font-size: 32px;
-    font-weight: bold;
-    padding: 5px 15px;
-    border-radius: 5px;
-    background-color: transparent;
-    border: 2px solid $main-txt-color;
+@mixin screen-buttons {
+  box-sizing: border-box;
+  color: $main-txt-color;
+  font-size: 32px;
+  font-weight: bold;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: transparent;
+  border: 2px solid $main-txt-color;
+}
+@mixin logo {
+  font-family: "Modak", cursive;
+  font-weight: normal;
+  font-size: 48px;
+  color: #e1c16d;
+  text-shadow: 1px 0 0 #59392a, 0 -1px 0 #59392a, 0 1px 0 #59392a,
+    -1px 0 0 #59392a;
+}
+@mixin screen-logo {
+  position: absolute;
+  left: 34%;
+  top: -2%;
+}
+@mixin screen-heading {
+  position: absolute;
+  left: 42%;
+  top: 20%;
+}
+@mixin screen-textfield {
+  position: absolute;
+  left: 33%;
+  top: 40%;
+}
+
+@mixin screen {
+  background-color: rgb(226, 244, 211);
+  background-image: linear-gradient(rgb(226, 244, 211), rgb(127, 150, 113));
+  height: 100vh;
 }
