--- a/client/src/sass/util/_mixins.scss
+++ b/client/src/sass/util/_mixins.scss
@@ -6,20 +6,29 @@
     -1px 0 0 #59392a;
 }
 // Main screen mixins
+@mixin screen {
+  background-color: rgb(226, 244, 211);
+  background-image: linear-gradient(rgb(226, 244, 211), rgb(127, 150, 113));
+  height: 100vh;
+}
+
 @mixin main-image {
   position: relative;
   width: 100vw;
+  height: 100vh;
 }
 
-@mixin screen-buttons {
-  box-sizing: border-box;
-  color: $main-txt-color;
-  font-size: 32px;
-  font-weight: bold;
-  padding: 5px 15px;
-  border-radius: 5px;
-  background-color: transparent;
-  border: 2px solid $main-txt-color;
+@mixin screen-content {
+  position: absolute;
+  height: 70vh;
+  left: 31%;
+  top: 3%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  justify-content: center;
+  
+  
 }
 @mixin logo {
   font-family: "Modak", cursive;
@@ -30,23 +39,33 @@
     -1px 0 0 #59392a;
 }
 @mixin screen-logo {
-  position: absolute;
-  left: 34%;
-  top: -2%;
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
 }
 @mixin screen-heading {
-  position: absolute;
-  left: 42%;
-  top: 20%;
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
 @mixin screen-textfield {
-  position: absolute;
-  left: 33%;
-  top: 40%;
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
 }
 
-@mixin screen {
-  background-color: rgb(226, 244, 211);
-  background-image: linear-gradient(rgb(226, 244, 211), rgb(127, 150, 113));
-  height: 100vh;
+@mixin screen-buttons {
+  box-sizing: border-box;
+  color: $main-txt-color;
+  font-size: 32px;
+  font-weight: bold;
+  max-width: fit-content;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: transparent;
+  border: 2px solid $main-txt-color;
 }
+
+@mixin form-button {
+  grid-column: 1 / 3;
+  grid-row: 6 / 7;
+}
+
+
