--- a/client/src/sass/screens/_main.scss
+++ b/client/src/sass/screens/_main.scss
@@ -22,3 +22,13 @@
   @include screen-buttons;
   @include form-button;
 }
+
+form {
+  grid-column: 1/3;
+  grid-row: 4/8;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
+}
