--- a/client/src/sass/screens/_game.scss
+++ b/client/src/sass/screens/_game.scss
@@ -1,59 +1,80 @@
 .game-board {
-    background-image: url('../../assets/gameboard-blueprint.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 900px; 
-    width:  1440px;
-    box-sizing: border-box;
+  background-image: url("../../assets/gameboard-blueprint.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 900px;
+  width: 1440px;
+  box-sizing: border-box;
 }
 
 .grid-board {
-    padding-top: 160px;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(12, 80px);
-    grid-template-rows: repeat(6, 80px);
+  padding-top: 160px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(12, 80px);
+  grid-template-rows: repeat(6, 80px);
 }
 
 .mailbox {
-    background-image: url('../../assets/mailbox/mailbox.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: 1;
-    content: "";
-    transition: transform .2s;
+  background-image: url("../../assets/mailbox/mailbox.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 1;
+  content: "";
+  transition: transform 0.2s;
 }
 
 .mailbox:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .selected {
-    background-image: url('../../assets/brown-bear/front.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: 2;
-    content: "";
-    pointer-events: none;
+  background-image: url("../../assets/brown-bear/front.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 2;
+  content: "";
+  pointer-events: none;
 }
 
-.black{
-    background-image: url('../../assets/black-bear/front.png');
-    background-position: center;
-    background-repeat: no-repeat;
+.black {
+  background-image: url("../../assets/black-bear/front.png");
+  background-position: center;
+  background-repeat: no-repeat;
+
+  & .up {
+    background-image: url("../../assets/black-bear/back.png");
+  }
+  & .left {
+    background-image: url("../../assets/black-bear/left.png");
+  }
+  & .right {
+    background-image: url("../../assets/black-bear/right.png");
+  }
 }
-.brown{
-    background-image: url('../../assets/brown-bear/front.png');
-    background-position: center;
-    background-repeat: no-repeat;
+.brown {
+  background-image: url("../../assets/brown-bear/front.png");
+  background-position: center;
+  background-repeat: no-repeat;
+
+  & .up {
+    background-image: url("../../assets/brown-bear/back.png");
+  }
+  & .left {
+    background-image: url("../../assets/brown-bear/left.png");
+  }
+  & .right {
+    background-image: url("../../assets/brown-bear/right.png");
+  }
 }
-.panda{
-    background-image: url('../../assets/panda-bear/front.png');
-    background-position: center;
-    background-repeat: no-repeat;
+
+.panda {
+  background-image: url("../../assets/panda-bear/front.png");
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.white{
-    background-image: url('../../assets/white-bear/front.png');
-    background-position: center;
-    background-repeat: no-repeat;
+.white {
+  background-image: url("../../assets/white-bear/front.png");
+  background-position: center;
+  background-repeat: no-repeat;
 }
