--- a/client/src/sass/components/_tile.scss
+++ b/client/src/sass/components/_tile.scss
@@ -3,3 +3,10 @@
     width: 80px;
     height: 80px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 900px) and (orientation: landscape) {
+    .members {
+        width: 40px;
+        height: 40px;
+    }
+  }
