--- a/client/src/sass/util/_queries.scss
+++ b/client/src/sass/util/_queries.scss
@@ -7,13 +7,69 @@
         @include screen-content-mobile;
     }
     .inner-content {
-        @include inner-content;
+        @include inner-content-mobile;
+    }
+    .heading {
+        @include screen-heading-grid-mobile;
+    }
+    .textfield {
+        @include screen-textfield-grid-mobile;
     }
     a {
         display: inline-block;
     }
 }
-@media (min-width: 425px){
+@media (min-width: 600px) {
+    .screen {
+        background: $desktop-image;
 
+    }
+    #home-screen-contents,
+    #login-screen-contents,
+    #register-screen-contents {
+        align-self: flex-start;
+        padding-right: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 80vh;
+    }
+    .logo {
+        padding-top: 40px;
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        align-self: flex-start;
+      }
+    .inner-content {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        height: 60%;
+    }
+    
+      .heading {
+        grid-column: 1 / 3;
+        grid-row: 1/2;
+      }
+      .textfield {
+        grid-column: 1 / 3;
+        grid-row: 2/3;
+      }
+      
+      .form-button {
+        @include screen-buttons;
+        @include form-button;
+      }
+      
+      form {
+        @include forms;
+      }
+      label {
+        @include form-labels;
+      }
+      input {
+        @include form-inputs;
+      }
+      input:focus {
+        @include form-inputs-focus;
+      }
 }
-@media (min-width: 725px){}
