--- a/client/src/sass/components/_modal.scss
+++ b/client/src/sass/components/_modal.scss
@@ -8,6 +8,7 @@
   border-color: #59392a;
   border-radius: 5px;
   min-height: 100px;
+  margin: 10px;
 }
 
 .ExitButton {
@@ -20,7 +21,7 @@
   border: none;
   left: 30%;
   top: 10%;
-  z-index: 1;
+  z-index: 4;
 }
 
 .ExitButton:hover {
@@ -42,6 +43,7 @@
   position: absolute;
   left: 30%;
   top: 10%;
+  z-index: 3;
 }
 
 .ModalTitle {
@@ -57,6 +59,19 @@
 .ModalScreenContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  padding: 10px;
+}
+
+.MessageFormContainer {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.MessageFormHeader {
+  display: flex;
+  
 }
 
 .MessageForm {
@@ -69,5 +84,13 @@
   background: none;
   font-family: "Modak", cursive;
   @include titles;
+}
+
+.member {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  color: $secondary-txt-color;
+  font-family: $main-txt-font-cursive;
 }
 
