--- a/client/src/sass/components/_nav.scss
+++ b/client/src/sass/components/_nav.scss
@@ -1,17 +1,30 @@
 nav {
   display: flex;
+  flex: 1;
   background-color: $secondary-txt-color;
-  position: absolute;
-  width: 60vw;
-  min-width: 500px;
   border-radius: 7px;
   box-sizing: border-box;
   padding: 5px 10px;
 }
 .logo {
   @include titles;
-  margin: 0 auto 0 0;
+  margin-right: auto;
+  padding: 10px;
 }
 .username {
-  margin: 0;
+  @include screen-content;
+  font-size: 48px;
+  color: $main-txt-color;
+  margin: 4px;
+  padding-right: 10px;
+}
+
+.button {
+  @include screen-buttons;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
