--- a/client/src/sass/screens/_game.scss
+++ b/client/src/sass/screens/_game.scss
@@ -182,7 +182,7 @@
     background-position: center 40px;
   }
   .grid-board {
-    padding-bottom: 80px;
+    padding-top: 40px;
     grid-template-columns: repeat(12, 40px);
     grid-template-rows: repeat(6, 40px);
   }
