--- a/client/src/sass/components/_modal.scss
+++ b/client/src/sass/components/_modal.scss
@@ -58,8 +58,21 @@
 .MessageFormContainer {
   display: flex;
   justify-content: start;
+  align-items: center;
   flex-direction: column;
   margin: 10px;
+}
+
+.MessageFormContainer>p {
+  width: 130px;
+  background-color: white;
+  border-style: solid;
+  border-width: thin;
+  border-color: #59392a;
+  border-radius: 5px;
+  min-height: 100px;
+  margin: 10px;
+  overflow: auto;
 }
 
 .MessageFormHeader {
@@ -76,14 +89,17 @@
   flex-direction: column;
   align-items: center;
 }
-
-.SubmitButton {
+.MessageForm>input {
+  background-color: white;
+}
+.SubmitButton, .DeleteButton {
   background: none;
   font-family: "Modak", cursive;
+  font-size: 17px;
+  width: 120px;
   border-radius: 7px;
   border-style: solid;
   border-color: $secondary-txt-color;
-  padding: 5px;
   @include titles;
 }
 
@@ -139,4 +155,8 @@
   color: $secondary-txt-color;
   background: transparent;
   border-radius: 5px;
+}
+
+.outlet {
+  display: flex;
 }
