home screen instructions

--- a/client/src/sass/util/_queries.scss
+++ b/client/src/sass/util/_queries.scss
@@ -3,6 +3,9 @@
         background: $mobile-image;
         
     }
+    .logo {
+      font-size: 20px;
+    }
     #home-screen-contents,
     #login-screen-contents,
     #register-screen-contents {
