--- a/client/src/sass/util/_mixins.scss
+++ b/client/src/sass/util/_mixins.scss
@@ -88,11 +88,11 @@
 @mixin screen-buttons {
   box-sizing: border-box;
   color: $main-txt-color;
+  font-family: $secondary-text-font;
   cursor: pointer;
   font-size: 32px;
   font-weight: bold;
-  max-height: 51px;
-  padding: 5px 10px;
+  width: 150px;
   border-radius: 5px;
   background-color: transparent;
   border: 2px solid $main-txt-color;
