-fixed bear creation screen

--- a/client/src/sass/components/_app.scss
+++ b/client/src/sass/components/_app.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Modak&family=Patrick+Hand&display=swap');
 
 .App {
-  background-color: #000;
+  background: $main-background-color;
   text-align: center;
   min-height: 100vh;
 }
