--- a/client/src/sass/util/_variables.scss
+++ b/client/src/sass/util/_variables.scss
@@ -1,4 +1,4 @@
-$main-background-color: #000;
+$main-background-color: linear-gradient(rgb(226, 244, 211), rgb(127, 150, 113));
 $main-txt-color: #E1C16D;
 $main-txt-font-cursive: 'Modak', cursive;
 $secondary-text-font: 'Patrick Hand';
