--- a/client/src/sass/util/_queries.scss
+++ b/client/src/sass/util/_queries.scss
@@ -25,8 +25,10 @@
         @include form-button;
       }
       
-      form {
-        @include forms;
+      form,
+      .avatar-form {
+        @include forms-mobile;
+
       }
       label {
         @include form-labels;
@@ -47,41 +49,36 @@
     #home-screen-contents,
     #login-screen-contents,
     #register-screen-contents {
-        align-self: flex-start;
-        padding-right: 40px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 80vh;
+        @include screen-content-desktop;
     }
     .logo {
-        padding-top: 40px;
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-        align-self: flex-start;
+        @include screen-logo-desktop;
+        font-size: 48px;
+        height: 50px;
       }
     .inner-content {
-        grid-column: 1 / 3;
-        grid-row: 2 / 3;
-        height: 60%;
+        @include inner-content-desktop;
     }
     
       .heading {
-        grid-column: 1 / 3;
-        grid-row: 1/2;
+        @include screen-heading-desktop;
       }
       .textfield {
-        grid-column: 1 / 3;
-        grid-row: 2/3;
+        @include screen-textfield-desktop;
       }
       
       .form-button {
         @include screen-buttons;
         @include form-button;
       }
+      #fur {
+        width: 200px;
+        height: 22px;
+        font-size: 20px;        
+      }
       
       form {
-        @include forms;
+        @include form-desktop;
       }
       label {
         @include form-labels;
