--- a/client/src/sass/components/_avatar.scss
+++ b/client/src/sass/components/_avatar.scss
@@ -1,5 +1,8 @@
 .avatar-form {
     color: $secondary-txt-color;
+    height: 120px;
+    justify-content: space-between;
+    padding-bottom: 20px;
 }
 
 
