--- a/client/src/sass/util/_mixins.scss
+++ b/client/src/sass/util/_mixins.scss
@@ -91,7 +91,7 @@
   cursor: pointer;
   font-size: 32px;
   font-weight: bold;
-  width: 150px;
+  max-width: 150px;
   border-radius: 5px;
   background-color: transparent;
   border: 2px solid $main-txt-color;
