-fixed controller sprite and adjusted style

--- a/client/src/sass/components/_controller.scss
+++ b/client/src/sass/components/_controller.scss
@@ -13,8 +13,8 @@
     height: 100px;
 }
 
-@media (min-width: 760px) {
-    .controller {
-    display:none;
-}
-}
+// @media (min-width: 760px) {
+//     .controller {
+//     display:none;
+// }
+// }
